Cleanup (#354)
* Fix most `@SuppressWarnings`

* Update buildscript

* Remove dead code

* Add missing `@Override` annotations

* Deobfuscate parameters

* Collapse switch statements

* Fix

* Combine nested if statements in else block to else if

* Reduce indentation when possible

* Convert to switch when reasonable

* Extract increment/decrement from statement

* Pull up assignment

* Simplify lambda expression and method reference syntax

* Deduplicate code

- Factorize operands
- Replace (X && Y) || (!X && Z) by X ? Y : Z
- Use '==' or '^' on booleans
- Merge conditions of if/else if/else that have the same blocks
- Pull down common code from if/else statement
- Single 'if' statement rather than duplicate blocks that fall through
- Remove redundant end of block with jump statement
- Remove redundant if condition
- Pull out a duplicate 'if' from an if/else

* Use pattern matching for instanceof

* Convert String concatenation to Text Block

* Convert to switch expression where possible

* Use diamond operator

* Convert to enhanced 'for' loops

* Always use 'this' qualifier

* Convert fields into local variables if the use is only local

* Use String.replace() instead of String.replaceAll() when possible

* Avoid Object.equals() or String.equalsIgnoreCase() on null objects

* Remove unnecessary casts

* Push down negation

* Remove redundant super() call in constructor

* Remove overridden assignment

* Remove redundant modifiers

* Raise embedded if into parent if

* Create array with curly brrackets when possible

* Remove variable assignment before return

* Remove unnecessary parentheses

* spotlessApply (#355)

Co-authored-by: GitHub GTNH Actions <>

* Update dependencies.gradle

* Update dependencies.gradle

* Update dependencies.gradle

* sa+deps

* add back GG mod in dep file

* Make requested changes

---------

Co-authored-by: github-actions[bot] <41898282+githu